--- a/styles/modules/popup.css
+++ b/styles/modules/popup.css
@@ -12,4 +12,15 @@
   font-weight: 300;
   line-height: 1.25em; }
 
+.popup_close {
+  content: "";
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  height: 16px;
+  width: 16px;
+  border-radius: 8px;
+  background: #11644b;
+  color: #45bd4f; }
+
 /*# sourceMappingURL=popup.css.map */
