Improved comments in Sass files

--- a/styles/src/modules/boxed-list.scss
+++ b/styles/src/modules/boxed-list.scss
@@ -1,4 +1,4 @@
-// List whose elements are rectangular boxes stacked in rows
+/* List whose elements are rectangular boxes stacked in rows */
 
 
 $elements-spacing: 6px;
