--- a/styles/modules/footer-popup.css
+++ b/styles/modules/footer-popup.css
@@ -1,3 +1,5 @@
+/* Popup which appears as a fixed footer on the bottom of the screen. */
+/* The whole footer container. */
 .footer-popup {
   display: flex;
   z-index: 1;
@@ -9,6 +11,7 @@
   font-size: 24rem;
   font-weight: 300; }
 
+/* Main content of the footer. */
 .footer-popup_content {
   position: relative;
   /* To relatively position it's child pseudo element */
