--- a/styles/layout.css
+++ b/styles/layout.css
@@ -34,5 +34,14 @@
   z-index: 1;
   top: 118px;
   right: 17px; }
+  @media (max-width: 620px) {
+    .layout-popup {
+      top: 230px; } }
+
+@media (max-width: 1150px) {
+  .layout-main,
+  .layout-page-footer {
+    padding-left: 60px;
+    padding-right: 60px; } }
 
 /*# sourceMappingURL=layout.css.map */
