--- a/styles/modules/header.css
+++ b/styles/modules/header.css
@@ -1,12 +1,16 @@
 .header {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
+  flex-flow: row wrap;
   align-items: center;
   box-sizing: border-box;
-  padding: 0 52px 0 0;
-  background: url("../../images/smf-logo.png") 23px 18px no-repeat #ff540e;
+  padding: 25px 52px 25px 39px;
+  background: #ff540e;
   font-size: 22rem; }
+
+.header_logo {
+  position: relative;
+  top: 7px;
+  left: -17px; }
 
 .header_link {
   /* Padding set to make room for the icon image to be displayed. */
@@ -20,10 +24,22 @@
     margin-left: 17px;
     padding-left: 79px;
     background-image: url("../../images/glasses-icon.png");
-    margin-left: 0; }
+    margin-left: auto; }
   .header_link.header_link-help {
     margin-left: 50px;
     padding-left: 46px;
     background-image: url("../../images/help-icon.png"); }
+
+@media (max-width: 620px) {
+  .header {
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    height: auto; }
+
+  .header_link {
+    width: 100%;
+    margin: 8px 0 0 0 !important;
+    padding-left: 0 !important;
+    background-image: none !important; } }
 
 /*# sourceMappingURL=header.css.map */
