--- a/styles/modules/boxed-list.css
+++ b/styles/modules/boxed-list.css
@@ -3,7 +3,7 @@
 .boxed-list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   /* To compensate for left and bottom margins of elements */
   width: calc(100% + 6px);
   margin: 0 0 -6px -6px;
