--- a/styles/src/_shared.scss
+++ b/styles/src/_shared.scss
@@ -1,3 +1,6 @@
+@import "tools";
+
+
 $images-dir: "../images";
 
 $text-primary-color: #ffffff;
@@ -10,15 +13,13 @@ $header-max-width-breakpoint: 620px;
 
 // Close button as a small circle in the top right corner
 @mixin close-button($background-color, $cross-mark-color) {
-  $circle-radius: 8px;
+
+  @include circle(8px, $background-color);
 
   content: "";
   position: absolute;
   top: 6px;
   right: 6px;
-  height: 2 * $circle-radius;
-  width: 2 * $circle-radius;
-  border-radius: $circle-radius;
-  background: $background-color;
   color: $cross-mark-color;
+
 }
