--- a/styles/layout.css
+++ b/styles/layout.css
@@ -21,7 +21,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 115px; }
+  padding-left: 157px;
+  padding-right: 157px; }
 
 .layout-main {
   order: 1;
@@ -40,7 +41,8 @@
 
 @media (max-width: 1150px) {
   .layout-main,
-  .layout-page-footer {
+  .layout-page-footer,
+  .layout-footer-popup {
     padding-left: 60px;
     padding-right: 60px; } }
 
