--- a/styles/src/base.scss
+++ b/styles/src/base.scss
@@ -74,3 +74,18 @@ hgroup {
 strong {
   font-weight: 600;
 }
+
+
+button {
+
+  border: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+}
