--- a/styles/src/modules/popup.scss
+++ b/styles/src/modules/popup.scss
@@ -1,4 +1,5 @@
-@import "shared";
+@import "../tools";
+@import "../shared";
 
 
 .popup {
@@ -17,6 +18,24 @@
   line-height: 1.25em;
 }
 
+
 .popup_close {
-  @include close-button(#11644b, #45bd4f);
+
+  @include circle(8px, #11644b);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  color: #45bd4f;
+  font-size: 22rem;
+
+}
+
+
+.popup_close-cross {
+  position: relative;
+  top: -12px;
 }
