--- a/styles/src/modules/boxed-list.scss
+++ b/styles/src/modules/boxed-list.scss
@@ -4,16 +4,24 @@
 $elements-spacing: 6px;
 
 
-/* The whole list */
+/* Container for the list. Necesarry to center the list. */
 .boxed-list {
   display: flex;
-  flex-flow: row wrap;
   justify-content: center;
+}
+
+
+/* The whole list */
+.boxed-list_list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
   /* To compensate for left and bottom margins of elements */
   width: calc(100% + #{$elements-spacing});
   margin: 0 0 (-$elements-spacing) (-$elements-spacing);
   padding: 0 0 $elements-spacing 0;
 }
+
 
 /* One element of the list */
 .boxed-list_element {
