--- a/styles/src/modules/hotel-offer.scss
+++ b/styles/src/modules/hotel-offer.scss
@@ -20,7 +20,7 @@ $gallery-height: 221px;
 
 
 .hotel-offer_gallery {
-  
+
   top: 0;
   left: 0;
   right: 0;
@@ -33,6 +33,18 @@ $gallery-height: 221px;
     position: absolute;
   }
 
+}
+
+
+.hotel-offer_heading {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+}
+
+
+.hotel-offer_main-info {
+  flex: 0 1 auto;
 }
 
 
@@ -54,12 +66,14 @@ $gallery-height: 221px;
 
 
 .hotel-offer_price {
-  position: absolute;
-  top: $gallery-height + 10px;
-  right: 6px;
+  flex: 0 0 auto;
+  position: relative;
+  top: -3px;
+  right: -11px;
   border: 1px solid #e7e9eb;
   border-radius: 2.5px;
-  padding: 5px 7px 6px;
+  margin-left: auto;
+  padding: 5px 7px 6px 9px;
   color: #45bd4f;
   font-size: 20rem;
 }
@@ -126,7 +140,14 @@ $gallery-height: 221px;
 
 
 .hotel-offer_tripadvisor-reviews-count {
+
   width: 100%;
   padding: 0 0 0 24px;
   background: url("../#{$images-dir}/tripadvisor-icon.png") left center no-repeat;
+
+  @media (max-width: 500px) {
+    margin-left: 12px;
+    width: auto;
+  }
+
 }
