--- a/styles/src/modules/boxed-list.scss
+++ b/styles/src/modules/boxed-list.scss
@@ -4,18 +4,11 @@
 $elements-spacing: 6px;
 
 
-/* Container for the list. Necesarry to center the list. */
+/* The whole list */
 .boxed-list {
   display: flex;
-  justify-content: center;
-}
-
-
-/* The whole list */
-.boxed-list_list {
-  display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: center;
   /* To compensate for left and bottom margins of elements */
   width: calc(100% + #{$elements-spacing});
   margin: 0 0 (-$elements-spacing) (-$elements-spacing);
@@ -26,4 +19,13 @@ $elements-spacing: 6px;
 /* One element of the list */
 .boxed-list_element {
   margin: 0 0 $elements-spacing $elements-spacing;
+}
+
+
+/* Empty element that makes sure that the last row of the flexbox container is
+   filled, so that the actually visible items nicely align to the left. */
+.boxed-list_element-dummy {
+  margin: 0 !important;
+  height: 0 !important;
+  padding: 0 !important;
 }
