--- a/styles/src/modules/footer-popup.scss
+++ b/styles/src/modules/footer-popup.scss
@@ -50,7 +50,7 @@ $image-height: 39px;
 }
 
 
-@media (max-width: 1100px) {
+@media (max-width: $footer-popup-max-width-breakpoint) {
 
   $image-offset: $image-height + 5px;
 
