--- a/styles/src/modules/hotel-offer.scss
+++ b/styles/src/modules/hotel-offer.scss
@@ -9,6 +9,7 @@ $gallery-height: 221px;
 
 
 .hotel-offer {
+  display: inline-block;
   position: relative;  /* To absolutely position the gallery. */
   box-sizing: border-box;
   width: 369px;
