--- a/styles/modules/boxed-list.css
+++ b/styles/modules/boxed-list.css
@@ -16,7 +16,7 @@
 /* Empty element that makes sure that the last row of the flexbox container is
    filled, so that the actually visible items nicely align to the left. */
 .boxed-list_element-dummy {
-  margin: 0 !important;
+  margin: 0 0 0 6px !important;
   height: 0 !important;
   padding: 0 !important; }
 
