--- a/styles/modules/header.css
+++ b/styles/modules/header.css
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
   align-items: center;
   box-sizing: border-box;
-  padding: 25px 52px 25px 39px;
+  padding: 0 52px 0 39px;
   background: #ff540e;
   font-size: 22rem; }
 
@@ -34,7 +34,9 @@
   .header {
     flex-flow: column nowrap;
     align-items: flex-start;
-    height: auto; }
+    height: auto;
+    padding-top: 25px;
+    padding-bottom: 25px; }
 
   .header_link {
     width: 100%;
