--- a/styles/src/modules/header.scss
+++ b/styles/src/modules/header.scss
@@ -60,7 +60,7 @@
     align-items: flex-start;
     height: auto;
     padding: {
-      top: 1kpx;
+      top: 10px;
       bottom: 10px;
     };
     font-size: 18rem;
