--- a/styles/modules/header.css
+++ b/styles/modules/header.css
@@ -35,7 +35,7 @@
     flex-flow: column nowrap;
     align-items: flex-start;
     height: auto;
-    padding-top: 1kpx;
+    padding-top: 10px;
     padding-bottom: 10px;
     font-size: 18rem; }
 
