--- a/styles/layout.css
+++ b/styles/layout.css
@@ -51,7 +51,7 @@
   .layout-main,
   .layout-page-footer,
   .layout-footer-popup {
-    padding-left: 60px;
-    padding-right: 60px; } }
+    padding-left: 6%;
+    padding-right: 6%; } }
 
 /*# sourceMappingURL=layout.css.map */
